--- a/marvel/templates/layout.html
+++ b/marvel/templates/layout.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="120x120" href="{% static 'favicon/apple-touch-icon-120.png'%}" />
     <link rel="apple-touch-icon" sizes="152x152" href="{% static 'favicon/apple-touch-icon-152.png'%}" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon-180.png'%}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.min.css'%}" />
 </head>
 <body>
 <div id="fullpage">
